container for the content of all the pages to avoid collapse with navbar

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -3,9 +3,10 @@
   width: 100%;
   height: 100vh;
   color: white;
+  margin-top: -80px;
 }
 
 // pour centrer correctement le contenu de la page en laissant la navbar
 .navbar-container {
-
+  padding-top: 80px;
 }
