--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,7 +6,6 @@
   right: 0;
   z-index: 3000;
   background-color: transparent;
-  padding-bottom: 50px;
 
   .navbar-collapse {
     flex-grow: 0;
